--- a/index.qmd
+++ b/index.qmd
@@ -56,9 +56,9 @@ Target Journal: JMIR Formative Research (1500 words)-->
 One of the biggest challenges in Alcohol Use Disorders (AUD) treatment stems from the chronic relapsing nature of this disease [@scottPathwaysRelapseTreatment2005]. People can relapse days, weeks, and even years after obtaining the goal of abstinence. At least 60% of AUD patients relapse to heavy drinking within 6 months following treatment [@nguyenPredictingRelapseAlcohol2020a; @witkiewitzPredictorsHeavyDrinking2011a; @kirshenbaumQuantitativeReviewUbiquitous2009].
 At most 50% of people with an AUD achieve remission after several years [@fleuryRemissionSubstanceUse2016; @heymanQuittingDrugsQuantitative2013].
 
-Identifying initial lapses in early recovery is critical. Lapses -- single episodes of alcohol use -- are easy to define, have a clear onset, and are also clinically meaningful. They serve as an early warning sign of returning back to previous drinking behavior inconsistent with desired goals [@witkiewitzRelapsePreventionAlcohol2004b; @chungRelapseAlcoholOther2006a; @marlattRelapsePreventionMaintenance2005a]. Lapse predicts future lapses, with more frequent ones resulting in increased risks of relapse [@hogstrombrandtPredictionSingleEpisodes1999a; @witkiewitzRelapsePreventionAlcohol2004b].
+Identifying initial lapses in early recovery is critical. Lapses -- single episodes of alcohol use -- are easy to define, have a clear onset, and are also clinically meaningful. They serve as an early warning sign of returning back to previous drinking behavior inconsistent with desired goals [@witkiewitzRelapsePreventionAlcohol2004a; @chungRelapseAlcoholOther2006a; @marlattRelapsePreventionMaintenance2005a]. Lapse predicts future lapses, with more frequent ones resulting in increased risks of relapse [@hogstrombrandtPredictionSingleEpisodes1999a; @witkiewitzRelapsePreventionAlcohol2004a].
 
-Current predictions of alcohol lapses rely heavily on self reports, which can be burdensome to measure in long run. Machine learning models leveraging ecological momentary assessment (EMA) measures have performed relatively well to predict goal-inconsistent alcohol use [@wyantMachineLearningModels2024]. The surveys were collected up to four times daily for three months. However, constantly completing surveys makes it burdensome for AUD patients. Although most EMA relevant mental health research demonstrated modest compliance rates, their time windows last from two weeks to three months [@porras-segoviaSmartphonebasedEcologicalMomentary2020; @czyzEcologicalAssessmentDaily2018; @vangenugtenExperiencedBurdenAdherence2020a; @mackesy-amitiFeasibilityEcologicalMomentary2018; @hungSmartphonebasedEcologicalMomentary2016]. The study length is insufficient because AUD is a chronic disease that requires constant risk monitoring. As extended period of time is anticipated, users' perceived burden of answering surveys is presumably larger [@mogkImplementationWorkflowStrategies2023]. Although minimizing the number of items in the surveys and the frequency of prompting users to complete the surveys might help mitigate the associated burden, it can inevitably reduce the prediction precision and temporal precision of predictions.
+Current predictions of alcohol lapses rely heavily on self reports, which can be burdensome to measure in long run. Machine learning models leveraging ecological momentary assessment (EMA) measures have performed relatively well to predict goal-inconsistent alcohol use [@wyantMachineLearningModels2024]. The surveys were collected up to four times daily for three months. However, constantly completing surveys makes it burdensome for AUD patients. Although most EMA relevant mental health research demonstrated modest compliance rates, their time windows last from two weeks to three months [@porras-segoviaSmartphonebasedEcologicalMomentary2020; @czyzEcologicalAssessmentDaily2018; @vangenugtenExperiencedBurdenAdherence2020; @mackesy-amitiFeasibilityEcologicalMomentary2018; @hungSmartphonebasedEcologicalMomentary2016]. The study length is insufficient because AUD is a chronic disease that requires constant risk monitoring. As extended period of time is anticipated, users' perceived burden of answering surveys is presumably larger [@mogkImplementationWorkflowStrategies2023]. Although minimizing the number of items in the surveys and the frequency of prompting users to complete the surveys might help mitigate the associated burden, it can inevitably reduce the prediction precision and temporal precision of predictions.
 
 Passive cellular communication sensing represents new opportunities due to its feasibility, relatively low burden on individuals and continuous data collection. In a smartphone-based sensing platform the primary expense on the individual is the smartphone. Smartphone usage is already widespread. Eighty-five percent of US adults have a smartphone and this number is consistent across all sociodemographic groups, including those in recovery programs for substance use [@massonHealthrelatedInternetUse2019a; @pewresearchcenterMobileFactSheet2021a]. Studies collecting passive data have demonstrated high acceptability from participants and higher compliance rates compared to active measures [@wyantAcceptabilityPersonalSensing2023a; @beukenhorstUsingSmartphonesReduce2022a]. Further, risk monitoring using cellular sensing is temporally sensitive to fluctuating risks. Analyzing communication patterns can detect potential triggers in time without actively prompting users to reflect on their feelings at the moment or report their environment.
 
@@ -68,58 +68,30 @@ This study aims at building machine learning models from cellular communications
 
 # Methods
 
-## Transparency and Openness
+## Participants and Procedure
 
-We adhere to research transparency principles that are crucial for robust and replicable science. We reported how we determined the sample size, all data exclusions, all manipulations, and all study measures. We provide a transparency report in the supplement [@aczelConsensusbasedTransparencyChecklist2019]. Our data, questionnaires, and other study materials are publicly available on our OSF page ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)). Our annotated analysis scripts and results are publicly available on our study website ([https://jjcurtin.github.io/study_messages/](https://jjcurtin.github.io/study_messages/)).
+We recruited adults in early recovery from AUD in Madison, Wisconsin, via print and digital advertisements and treatment center partnerships. We required participants: were age 18 or older, could write and read in English, had moderate to severe AUD ^[(\>= 4 self-reported DSM-5 symptoms)], were abstinent from alcohol for 1-8 weeks, were willing to use a single smartphone, and were not exhibiting severe symptoms of psychosis or paranoia.^[Defined as scores >2.2 or 2.8, respectively, on the psychosis or paranoia scales of the Symptom Checklist–90 [@derogatislBriefSymptomInventory]]
 
+Participants completed up to 5 study visits over approximately 3 months: a screening visit, intake visit, and 3 monthly follow-up visits. At screening we collected self-report information about demographics (age, sex at birth, race, ethnicity, education, marital status, employment, and income) and clinical characteristics (DSM-5 AUD symptom count, alcohol problems [@hurlbutAssessingAlcoholProblems1992], and presence of psychological symptoms [@derogatislBriefSymptomInventory]). At intake we collected self-report information about abstinence self-efficacy [@mckiernanDevelopmentBriefAbstinence2011], craving [@flanneryPsychometricPropertiesPenn1999], and recent alcohol recovery efforts. At each monthly follow-up visit, we downloaded participants' voice call and SMS text message metadata logs from their smartphone devices. Participants were asked 7 contextual questions about important contacts (i.e., people whom the partcipant communicated with at least twice by voice call or SMS text message in a one month period). While enrolled, participants were expected to complete 4 brief (7-10 questions) daily ecological momentary assessments (EMA). The first item asked participants to report dates and times of any recent alcohol use. We verified lapse reports at follow-up visits with a timeline follow-back interview. Additional sensing data streams and self-report measures were collected as part of the parent grant's aims (R01 AA024391). Our study materials are publicly available ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)). 
 
-## Participants
-
-We recruited 192 participants in early recovery from AUD in Madison, Wisconsin, USA via print and targeted digital advertisements and partnerships with treatment centers. This sample size was determined based on traditional power analysis methods for logistic regression [@hsiehSampleSizeTables1989]. We required that participants:   
-
-1.  were age 18 or older,
-2.  could write and read in English,
-3.  had at least moderate AUD (\>= 4 self-reported DSM-5 symptoms), 
-4.  were abstinent from alcohol for 1-8 weeks, and 
-5.  were willing to use a single smartphone (personal or study provided) while on study.
-6.  were not exhibiting severe symptoms of psychosis or paranoia.^[Defined as scores >2.2 or 2.8, respectively, on the psychosis or paranoia scales of the Symptom Checklist–90 [@derogatislBriefSymptomInventory]]
-
-One hundred sixty-nine participants were eligible and enrolled in the study. Fifteen participants discontinued before the first monthly follow-up visit. We excluded data from one participant who did not maintain a goal of abstinence during their participation. We also excluded data from two participants due to evidence of careless responding and unusually low compliance. Our final sample consisted of 151 participants. <!--check other exclusions-->
-
-
-## Procedure
-
-All procedures were approved by the University of Wisconsin-Madison Institutional Review Board (Study #2015-0780). Participants completed 5 study visits over approximately 3 months. Participants attended an in-person screening visit where we determined eligibility, obtained informed consent, and administered a battery of self-report measures. Eligible, consented participants returned approximately 1 week later for an intake visit. Three additional follow-up visits occurred about every 30 days that participants remained on study. At each follow-up visit, we downloaded participants' voice call and SMS text message logs from their smartphone devices, collected contextual self-report information about important contacts, and administered additional self-report measures. 
-
-Participants were expected to complete 4 brief (7-10 questions) daily ecological momentary assessments (EMA) for the duration of their enrollment. The first item on each EMA asked participants to report dates and times of any recent alcohol use. At follow-up visits, we verified lapse reports and queried participants about additional unreported laspes using a timeline followback measure. Additional sensing data streams (geolocation, sleep quality, and audio check-ins) were collected as part of the parent grant's aims (R01 AA024391). 
-
-
-## Measures
-<!--Be sure to include all baseline feature surveys-->
-
-## Cellular Communication Logs
-
-
-## Context 
-Participants were asked <!--X--> contextual questions about important contacts (people whom the partcipant communicated with at least twice by voice call or SMS text message in a one month period). 
+We screened 192 participants. Of these, 169 enrolled and 154 completed the first follow-up visit. We excluded data from 3 participants for no longer having a goal of abstinence, evidence of careless responding, and unusually low compliance. Our final sample included 151 participants.<!--check other exclusions-->
 
 
 ## Data Analysis Plan
-<!--where to mention data was filtered down to important contacts-->
+- Our annotated analysis scripts and results are publicly available on our study website ([https://jjcurtin.github.io/study_messages/](https://jjcurtin.github.io/study_messages/)).
 
-### Model Configurations
-
-### Feature Engineering
+- data was filtered down to important contacts (i.e., communications we had contextual information about.)
+- Feature Engineering
+- Model Configurations
 
 <!--create table of all features and which models they were in-->
 
-### Model Evaluation
+- Model Evaluation (including Comparison, and Feature Importance)
 
 
-### Model Comparison
+## Ethical Considerations
+All procedures were approved by the University of Wisconsin-Madison Institutional Review Board (Study #2015-0780). All participants provided written informed consent.
 
-
-### Feature Importance
 
 
 
@@ -131,10 +103,6 @@ Participants were asked <!--X--> contextual questions about important contacts (
 
 ## Model Evaluation
 
-## Model Comparison
-
-
-## Feature Importance
 
 {{< embed notebooks/mak_figures.qmd#fig-1 >}} 
 
